@@ -4,11 +4,12 @@
 /openwrt*
 /*.img
 /.emacs*
-/src/modules/Module.symvers
 /src/modules/DSL-2760U
-/src/modules/*.o
 /src/modules/*.ko
-/src/modules/*.mod.c
-/src/modules/.*.cmd
-/src/modules/.*.d
+/src/modules/**/*.ko
+Module.symvers
+*.o
+*.mod.c
+.*.cmd
+.*.d
 .tmp*
