@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Backfire (r26686)
-# Mon Apr 18 15:28:10 2011
+# Thu Apr 21 13:06:05 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1871,7 +1871,7 @@ CONFIG_PACKAGE_samba2-common=m
 CONFIG_PACKAGE_samba2-server=m
 CONFIG_PACKAGE_samba3=m
 CONFIG_SAMBA3_DEBUG=y
-# CONFIG_PACKAGE_sshfs is not set
+CONFIG_PACKAGE_sshfs=m
 # CONFIG_PACKAGE_unfs3 is not set
 
 #
@@ -2442,7 +2442,7 @@ CONFIG_PACKAGE_libopenssl=y
 # CONFIG_PACKAGE_fribidi is not set
 # CONFIG_PACKAGE_giflib is not set
 # CONFIG_PACKAGE_glib1 is not set
-# CONFIG_PACKAGE_glib2 is not set
+CONFIG_PACKAGE_glib2=m
 # CONFIG_PACKAGE_glibmm is not set
 # CONFIG_PACKAGE_id3lib is not set
 # CONFIG_PACKAGE_libIDL2 is not set
@@ -2826,7 +2826,7 @@ CONFIG_PACKAGE_vim-runtime=m
 # CONFIG_PACKAGE_dosfsck is not set
 # CONFIG_PACKAGE_dosfslabel is not set
 # CONFIG_PACKAGE_e2fsprogs is not set
-# CONFIG_PACKAGE_fuse-utils is not set
+CONFIG_PACKAGE_fuse-utils=m
 # CONFIG_PACKAGE_gadgetfs-test-bulk is not set
 # CONFIG_PACKAGE_gadgetfs-test-isoc is not set
 # CONFIG_PACKAGE_mkdosfs is not set
