@@ -1,28 +1,0 @@
-kernel/net/ipv4/netfilter/iptable_mangle.ko
-kernel/net/ipv4/netfilter/ipt_addrtype.ko
-kernel/net/ipv4/netfilter/ipt_ah.ko
-kernel/net/ipv4/netfilter/ipt_tos.ko
-kernel/net/ipv4/netfilter/ipt_TOS.ko
-kernel/net/ipv4/netfilter/ipt_ttl.ko
-kernel/net/ipv4/netfilter/ipt_TTL.ko
-kernel/net/ipv4/netfilter/ipt_SAME.ko
-kernel/net/ipv4/netfilter/ipt_ULOG.ko
-kernel/net/ipv4/netfilter/nf_nat_proto_esp.ko
-kernel/net/ipv4/netfilter/nf_nat_tftp.ko
-kernel/net/ipv4/netfilter/nf_nat_irc.ko
-kernel/net/ipv4/netfilter/nf_nat_h323.ko
-kernel/net/ipv4/netfilter/nf_nat_sip.ko
-kernel/net/ipv4/netfilter/nf_nat_snmp_basic.ko
-kernel/net/netfilter/nf_conntrack_proto_esp.ko
-kernel/net/netfilter/nf_conntrack_tftp.ko
-kernel/net/netfilter/nf_conntrack_irc.ko
-kernel/net/netfilter/nf_conntrack_h323.ko
-kernel/net/netfilter/nf_conntrack_sip.ko
-kernel/net/netfilter/xt_realm.ko
-kernel/net/netfilter/xt_esp.ko
-kernel/net/netfilter/xt_policy.ko
-kernel/net/netfilter/xt_SKIPLOG.ko
-kernel/net/netfilter/nfnetlink.ko
-kernel/net/netfilter/xt_NFQUEUE.ko
-kernel/net/netfilter/xt_NFLOG.ko
-kernel/net/netfilter/nfnetlink_queue.ko
