@@ -1,3 +1,0 @@
-#8021q
-#switch-core
-#switch-robo
