@@ -1,0 +1,8 @@
+EXTRA_CFLAGS += -I$(M)/linux/include -I$(M)/linux/arch/mips/include/asm/mach-bcm63xx \
+				-DCONFIG_BCM63XX_CPU_6358
+
+obj-m = xt_connlimit.o \
+		ipt_IPID.o \
+		switch/
+#		btn_hotplug/
+#		bcm63xx_enet.o
