@@ -1,0 +1,7 @@
+EXTRA_CFLAGS += -I$(BUILD_DIR)/bcmdrivers/broadcom/include/$(BRCM_BOARD) \
+        -I$(BUILD_DIR)/bcmdrivers/opensource/include/$(BRCM_BOARD) \
+        -I$(BUILD_DIR)/shared/opensource/include/$(BRCM_BOARD)
+
+obj-m = btn_hotplug.o
+
+btn_hotplug-y := button.o hotplug.o
