@@ -1,0 +1,1 @@
+obj-m = switch-core.o switch-robo.o
